--- a/MyApplicationSienke/app/src/main/res/layout/business_net_book_listview_item.xml
+++ b/MyApplicationSienke/app/src/main/res/layout/business_net_book_listview_item.xml
@@ -3,45 +3,39 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/text_font_color_white">
+
         <ImageView
             android:id="@+id/name_pic"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@mipmap/business_net_book_icon"
-            android:padding="10dp"/>
+            android:padding="10dp"
+            android:src="@mipmap/business_net_book_icon" />
 
         <TextView
             android:id="@+id/name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
+            android:layout_toRightOf="@id/name_pic"
             android:drawablePadding="15dp"
             android:gravity="center"
             android:padding="10dp"
             android:text="安安"
             android:textColor="@color/text_black"
-            android:layout_toRightOf="@id/name_pic"
             android:textSize="16sp" />
+
         <TextView
             android:id="@+id/jihuo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="未激活"
             android:layout_toRightOf="@id/name"
-            android:padding="10dp"/>
-
-        <TextView
-            android:id="@+id/guanzhu"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="10dp"
             android:padding="10dp"
-            android:text="申请关注" />
+            android:text="18589706246" />
 
     </RelativeLayout>
 
