--- a/MyApplicationSienke/app/src/main/res/layout/email_info_item.xml
+++ b/MyApplicationSienke/app/src/main/res/layout/email_info_item.xml
@@ -12,7 +12,7 @@
         android:orientation="horizontal">
 
         <CheckBox
-            android:id="@+id/check"
+            android:id="@+id/check1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
