--- a/MyApplicationSienke/app/src/main/res/layout/activity_business_community.xml
+++ b/MyApplicationSienke/app/src/main/res/layout/activity_business_community.xml
@@ -40,34 +40,37 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/business_book_search_bg"
-        android:layout_margin="10dp">
+        android:layout_margin="10dp"
+        android:background="@drawable/business_book_search_bg">
+
         <EditText
             android:id="@+id/etSearch"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:hint="输入搜索内容"
-            android:maxLines="1"
+            android:background="@null"
             android:drawableLeft="@drawable/search_pictrue_selector"
             android:drawablePadding="3dp"
+            android:gravity="center_vertical"
+            android:hint="输入搜索内容"
             android:maxLength="11"
-            android:background="@null"
-            android:paddingTop="6dp"
+            android:maxLines="1"
             android:paddingBottom="6dp"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
+            android:paddingTop="6dp"
             android:textSize="12sp" />
+
         <TextView
             android:id="@+id/search"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
             android:background="@drawable/community_selector"
-            android:text="搜索"
-            android:textSize="16sp"
             android:gravity="center"
-            android:layout_alignParentRight="true"/>
+            android:text="搜索"
+            android:textSize="16sp" />
     </RelativeLayout>
+
     <ListView
         android:id="@+id/listview"
         android:layout_width="match_parent"
