--- a/MyApplicationSienke/app/src/main/res/layout/activity_cx.xml
+++ b/MyApplicationSienke/app/src/main/res/layout/activity_cx.xml
@@ -1,13 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@android:id/tabhost"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@mipmap/statistics_bg"
-    android:orientation="vertical"
-    tools:context="com.example.administrator.thinker_soft.android_cbjactivity.BianHaoCXActivity">
-
+    android:background="@android:color/white"
+    android:orientation="vertical">
 
     <!-- 中间部分 -->
 
