--- a/MyApplicationSienke/app/src/main/res/drawable/loading_shape.xml
+++ b/MyApplicationSienke/app/src/main/res/drawable/loading_shape.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <corners android:radius="8dp"/>
     <!-- dashWidth指的是边线的长度 dashGap 指的是每条线之间的间距 width指的是边线的宽度 -->
-    <solid android:color="@android:color/white"/>
+    <solid android:color="#FFFFFF" />
 </shape>
