--- a/MyApplicationSienke/app/src/main/res/layout/activity_bianhao.xml
+++ b/MyApplicationSienke/app/src/main/res/layout/activity_bianhao.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:background="@mipmap/statistics_bg"
+              android:background="@color/gray_thin"
               android:orientation="vertical">
     <!-- 标题 -->
     <RelativeLayout
