--- a/MyApplicationSienke/app/src/main/res/layout/activity_cbj.xml
+++ b/MyApplicationSienke/app/src/main/res/layout/activity_cbj.xml
@@ -1,126 +1,115 @@
-<com.example.administrator.thinker_soft.myfirstpro.util.AnimationTabHost xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@android:id/tabhost"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.example.administrator.thinker_soft.android_cbjactivity.CBJActivity">
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:id="@+id/root_linearlayout"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical">
 
-    <LinearLayout
+    <RelativeLayout
+        android:id="@+id/root_relative"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="50dp"
+        android:background="@color/theme_colors"
+        android:gravity="center_vertical"
+        android:paddingRight="5dp">
 
-        <LinearLayout
-            android:id="@+id/root_linearlayout"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:background="@color/theme_colors"
-            android:orientation="horizontal"
-            android:gravity="center_vertical">
-
-            <ImageView
-                android:id="@+id/back"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:padding="10dp"
-                android:background="@drawable/circle_selector"
-                android:src="@drawable/back_selector" />
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center">
-
-                <TextView
-                    android:id="@+id/homepageTitle"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:textColor="@android:color/white"
-                    android:textSize="22sp" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/systemSet"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:gravity="center">
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:padding="10dp"
-                    android:background="@drawable/circle_selector"
-                    android:src="@mipmap/more" />
-
-                <TextView
-                    android:id="@+id/systemSet_badget_tv"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-            </LinearLayout>
-        </LinearLayout>
-
-        <FrameLayout
-            android:id="@android:id/tabcontent"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:background="@android:color/white" />
-
-        <TabWidget
-            android:id="@android:id/tabs"
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/user_name"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:visibility="gone" />
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="10dp"
+            android:text="张三"
+            android:textColor="@android:color/white"
+            android:textSize="14sp"
+            android:visibility="gone"/>
 
-        <RadioGroup
-            android:id="@+id/main_radio"
-            android:layout_width="match_parent"
-            android:layout_height="55dp"
-            android:background="@mipmap/tabbar_bgblack"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
+        <ImageView
+            android:id="@+id/back"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:background="@drawable/circle_selector"
+            android:padding="10dp"
+            android:src="@drawable/back_selector"/>
 
-            <RadioButton
-                android:id="@+id/radio_button0"
-                style="@style/main_tab_bottom"
-                android:checked="true"
-                android:drawableTop="@drawable/select_icon_1"
-                android:text="@string/page_one"
-                android:textColor="@drawable/radiogroup_text_selector"
-                android:drawablePadding="5dp"
-                android:textSize="12sp"/>
+        <TextView
+            android:id="@+id/title_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="安检选项"
+            android:textColor="@android:color/white"
+            android:textSize="22sp"/>
 
-            <RadioButton
-                android:id="@+id/radio_button1"
-                style="@style/main_tab_bottom"
-                android:drawableTop="@drawable/select_icon_2"
-                android:text="@string/page_two"
-                android:textColor="@drawable/radiogroup_text_selector"
-                android:drawablePadding="5dp"
-                android:textSize="12sp"/>
+        <ImageView
+            android:id="@+id/more"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:background="@drawable/circle_selector"
+            android:padding="10dp"
+            android:src="@mipmap/more"/>
+    </RelativeLayout>
 
-            <RadioButton
-                android:id="@+id/radio_button2"
-                style="@style/main_tab_bottom"
-                android:drawableTop="@drawable/select_icon_3"
-                android:text="@string/page_three"
-                android:textColor="@drawable/radiogroup_text_selector"
-                android:drawablePadding="5dp"
-                android:textSize="12sp"/>
+    <android.support.v4.view.ViewPager
+        android:id="@+id/view_pager"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"/>
 
-            <RadioButton
-                android:id="@+id/radio_button3"
-                style="@style/main_tab_bottom"
-                android:drawableTop="@drawable/select_icon_4"
-                android:text="@string/page_four"
-                android:textColor="@drawable/radiogroup_text_selector"
-                android:drawablePadding="5dp"
-                android:textSize="12sp"/>
+    <TabWidget
+        android:id="@android:id/tabs"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone"/>
 
-        </RadioGroup>
-    </LinearLayout>
-</com.example.administrator.thinker_soft.myfirstpro.util.AnimationTabHost>
+    <RadioGroup
+        android:id="@+id/main_radio"
+        android:layout_width="match_parent"
+        android:layout_height="55dp"
+        android:background="@mipmap/tabbar_bgblack"
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
+
+        <RadioButton
+            android:id="@+id/radio_button0"
+            style="@style/main_tab_bottom"
+            android:checked="true"
+            android:drawablePadding="5dp"
+            android:drawableTop="@drawable/select_icon_1"
+            android:text="@string/page_one"
+            android:textColor="@drawable/radiogroup_text_selector"
+            android:textSize="12sp"/>
+
+        <RadioButton
+            android:id="@+id/radio_button1"
+            style="@style/main_tab_bottom"
+            android:drawablePadding="5dp"
+            android:drawableTop="@drawable/select_icon_2"
+            android:text="@string/page_two"
+            android:textColor="@drawable/radiogroup_text_selector"
+            android:textSize="12sp"/>
+
+        <RadioButton
+            android:id="@+id/radio_button2"
+            style="@style/main_tab_bottom"
+            android:drawablePadding="5dp"
+            android:drawableTop="@drawable/select_icon_3"
+            android:text="@string/page_three"
+            android:textColor="@drawable/radiogroup_text_selector"
+            android:textSize="12sp"/>
+
+        <RadioButton
+            android:id="@+id/radio_button3"
+            style="@style/main_tab_bottom"
+            android:drawablePadding="5dp"
+            android:drawableTop="@drawable/select_icon_4"
+            android:text="@string/page_four"
+            android:textColor="@drawable/radiogroup_text_selector"
+            android:textSize="12sp"/>
+
+    </RadioGroup>
+
+</LinearLayout>
