--- a/MyApplicationSienke/app/src/main/res/layout/activity_user_name.xml
+++ b/MyApplicationSienke/app/src/main/res/layout/activity_user_name.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@mipmap/statistics_bg"
-    android:orientation="vertical">
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:background="@color/gray_thin"
+              android:orientation="vertical">
     <!-- 标题 -->
     <RelativeLayout
         android:layout_width="match_parent"
@@ -19,7 +19,7 @@
             android:layout_centerVertical="true"
             android:background="@drawable/circle_selector"
             android:padding="10dp"
-            android:src="@drawable/back_selector" />
+            android:src="@drawable/back_selector"/>
 
         <TextView
             android:id="@+id/textviewshezi"
@@ -29,26 +29,26 @@
             android:gravity="center"
             android:text="设置"
             android:textColor="@android:color/white"
-            android:textSize="22sp" />
+            android:textSize="22sp"/>
     </RelativeLayout>
 
     <EditText
         android:id="@+id/edit_user_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="10dp"
         android:background="@drawable/normal_button_bg_selector"
+        android:gravity="center"
         android:hint="请输入用户名"
         android:padding="10dp"
         android:singleLine="true"
         android:textColor="@color/text_gray"
-        android:gravity="center"
-        android:textSize="14sp"
-        android:layout_margin="10dp"/>
+        android:textSize="14sp"/>
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/gray_thin" />
+        android:background="@color/gray_thin"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -72,7 +72,7 @@
             android:paddingTop="5dp"
             android:text="取消"
             android:textColor="@android:color/white"
-            android:textSize="16sp" />
+            android:textSize="16sp"/>
 
         <TextView
             android:id="@+id/query"
@@ -86,12 +86,12 @@
             android:paddingTop="5dp"
             android:text="查询"
             android:textColor="@android:color/white"
-            android:textSize="16sp" />
+            android:textSize="16sp"/>
     </LinearLayout>
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/gray_thin" />
+        android:background="@color/gray_thin"/>
 
 </LinearLayout>
