--- a/MyApplicationSienke/app/src/main/res/layout/activity_business_message.xml
+++ b/MyApplicationSienke/app/src/main/res/layout/activity_business_message.xml
@@ -225,6 +225,7 @@
     </LinearLayout>
 
     <RelativeLayout
+        android:id="@+id/send"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/text_font_color_white">
@@ -233,7 +234,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:drawableLeft="@mipmap/fasong"
+            android:drawableLeft="@drawable/business_fasong_selector"
             android:drawablePadding="5dp"
             android:padding="10dp"
             android:text="发送报告"
