--- a/MyApplicationSienke/app/src/main/res/layout/activity_business_send_email.xml
+++ b/MyApplicationSienke/app/src/main/res/layout/activity_business_send_email.xml
@@ -194,7 +194,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:drawableLeft="@mipmap/fasong"
+            android:drawableLeft="@drawable/business_fasong_selector"
             android:drawablePadding="5dp"
             android:padding="10dp"
             android:text="发送邮件"
