--- a/MyApplicationSienke/app/src/main/res/layout/email_info_item.xml
+++ b/MyApplicationSienke/app/src/main/res/layout/email_info_item.xml
@@ -4,7 +4,8 @@
     android:layout_height="match_parent"
     android:layout_marginTop="5dp"
     android:background="@color/text_font_color_white"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:descendantFocusability="blocksDescendants">
 
     <LinearLayout
         android:layout_width="match_parent"
