--- a/MyApplicationSienke/app/src/main/res/layout/popupwindow_pup_publish.xml
+++ b/MyApplicationSienke/app/src/main/res/layout/popupwindow_pup_publish.xml
@@ -4,52 +4,73 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@mipmap/pop_banner"
-        android:orientation="vertical">
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@mipmap/pop_banner"
+            android:orientation="vertical">
 
 
-        <TextView
-            android:id="@+id/zhiliao"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:layout_marginTop="15dp"
-            android:gravity="center"
-            android:text="常备资料"
-            android:textColor="@color/text_black"
-            android:textSize="16sp" />
+            <TextView
+                android:id="@+id/zhiliao"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_marginTop="15dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="常备资料"
+                android:textColor="@color/text_black"
+                android:textSize="16sp" />
 
-        <TextView
-            android:id="@+id/shenghuo"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="文化生活"
-            android:textColor="@color/text_black"
-            android:textSize="16sp" />
+            <View
+                android:layout_width="wrap_content"
+                android:layout_height="1dp"
+                android:background="@color/gray_thin" />
 
-        <TextView
-            android:id="@+id/jianyi"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:gravity="center"
-            android:layout_weight="1"
-            android:text="管理建议"
-            android:textColor="@color/text_black"
-            android:textSize="16sp" />
 
-        <TextView
-            android:id="@+id/jianwen"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="趣事见闻"
-            android:textColor="@color/text_black"
-            android:textSize="16sp" />
-    </LinearLayout>
+            <TextView
+                android:id="@+id/shenghuo"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="文化生活"
+                android:textColor="@color/text_black"
+                android:textSize="16sp" />
+
+            <View
+                android:layout_width="wrap_content"
+                android:layout_height="1dp"
+                android:background="@color/gray_thin" />
+
+            <TextView
+                android:id="@+id/jianyi"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="管理建议"
+                android:textColor="@color/text_black"
+                android:textSize="16sp" />
+
+            <View
+                android:layout_width="wrap_content"
+                android:layout_height="1dp"
+                android:background="@color/gray_thin" />
+
+            <TextView
+                android:id="@+id/jianwen"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="趣事见闻"
+                android:textColor="@color/text_black"
+                android:textSize="16sp" />
+        </LinearLayout>
+    </ScrollView>
 </LinearLayout>
