--- a/MyApplicationSienke/app/src/main/res/layout/activity_business_message.xml
+++ b/MyApplicationSienke/app/src/main/res/layout/activity_business_message.xml
@@ -93,7 +93,7 @@
                 android:textSize="16sp" />
 
             <TextView
-                android:id="@+id/security_type"
+                android:id="@+id/time"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
