--- a/MyApplicationSienke/app/src/main/res/layout/activity_business_flow_info.xml
+++ b/MyApplicationSienke/app/src/main/res/layout/activity_business_flow_info.xml
@@ -137,7 +137,7 @@
                         android:textSize="16sp" />
 
                     <TextView
-                        android:id="@+id/start_date"
+                        android:id="@+id/time"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
