--- a/MyApplicationSienke/app/src/main/res/layout/popwindow_content.xml
+++ b/MyApplicationSienke/app/src/main/res/layout/popwindow_content.xml
@@ -18,12 +18,20 @@
         android:padding="10dp"
         android:text=""
         android:textColor="@color/red"
-        android:textSize="14sp" />
-
-    <View
-        android:layout_width="120dp"
-        android:layout_height="1dp"
-        android:background="@color/gray" />
+        android:textSize="14sp"
+        android:visibility="gone"/>
+    <TextView
+        android:id="@+id/tesseract_ocr"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:drawableLeft="@mipmap/tesseract_ocr"
+        android:drawableStart="@mipmap/tesseract_ocr"
+        android:drawablePadding="5dp"
+        android:gravity="center"
+        android:padding="10dp"
+        android:text="tesseract_ocr"
+        android:textColor="@color/red"
+        android:textSize="14sp"/>
 
     <TextView
         android:id="@+id/popwindow_content_mapMeter"
